// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Route) Ask (Component) Answers (Render) when hasQuestion is false matches snapshot 1`] = `
<div
  className="answers hideable gone"
>
  <label
    className="input-label input-label-answers"
  >
    Add some responses
  </label>
  <Connect(Answer)
    disabled={true}
    index={0}
    key="0"
  />
</div>
`;

exports[`(Route) Ask (Component) Answers (Render) when hasQuestion is true matches snapshot 1`] = `
<div
  className="answers hideable"
>
  <label
    className="input-label input-label-answers"
  >
    Add some responses
  </label>
  <Connect(Answer)
    disabled={true}
    index={0}
    key="0"
  />
</div>
`;

exports[`(Route) Ask (Component) Answers (Render) with answers as objects matches snapshot 1`] = `
<div
  className="answers hideable"
>
  <label
    className="input-label input-label-answers"
  >
    Add some responses
  </label>
  <Connect(Answer)
    index={0}
    key="0"
    text="Answer 4"
  />
  <Connect(Answer)
    index={1}
    key="1"
    text="Answer 5"
  />
  <Connect(Answer)
    index={2}
    key="2"
    text="Answer 6"
  />
  <Connect(Answer)
    disabled={true}
    index={3}
    key="3"
  />
</div>
`;

exports[`(Route) Ask (Component) Answers (Render) with answers as strings matches snapshot 1`] = `
<div
  className="answers hideable"
>
  <label
    className="input-label input-label-answers"
  >
    Add some responses
  </label>
  <Connect(Answer)
    index={0}
    key="0"
    text="Answer 1"
  />
  <Connect(Answer)
    index={1}
    key="1"
    text="Answer 2"
  />
  <Connect(Answer)
    index={2}
    key="2"
    text="Answer 3"
  />
  <Connect(Answer)
    disabled={true}
    index={3}
    key="3"
  />
</div>
`;
